--- a/index.ipynb
+++ b/index.ipynb
@@ -40,7 +40,11 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "%matplotlib inline"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -56,7 +60,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = None"
+    "df = pd.read_csv('causes_of_death.tsv', delimiter='\\t')"
    ]
   },
   {
@@ -71,7 +75,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df.head()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -97,7 +103,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "df.groupby(['State', 'Gender']).sum()"
    ]
   },
   {
@@ -113,7 +120,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "df.groupby(['State', 'Gender', 'Race']).mean()"
    ]
   },
   {
@@ -129,7 +137,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "df.groupby(['Gender', 'Race']).min()"
    ]
   },
   {
@@ -149,7 +158,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Your code here\n"
+    "#Your code here\n",
+    "df.groupby('State')['Deaths'].sum().plot(kind = 'bar', figsize= (12,12), title = 'Total Number of Deaths by State')\n",
+    "plt.ylabel('Number of Deaths')"
    ]
   },
   {
@@ -168,7 +179,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df.info()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -184,7 +197,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df.Population.head()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -200,7 +215,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df.Population.value_counts()[0:4]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -230,7 +247,10 @@
    "outputs": [],
    "source": [
     "#Your code here\n",
-    "to_drop = None\n"
+    "to_drop = df[df['Population'] == 'Not Applicable']\n",
+    "df.drop(to_drop.index, axis=0, inplace=True)\n",
+    "df.Population = df.Population.astype('int64')\n",
+    "print(df.Population.dtype)"
    ]
   },
   {
@@ -248,7 +268,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Your code here\n"
+    "#Your code here\n",
+    "df.groupby('State')['Population'].mean().plot(kind = 'bar', figsize= (12,12), title = 'Mean Population by State')\n",
+    "plt.ylabel('Mean Population')"
    ]
   },
   {
@@ -277,7 +299,9 @@
    "outputs": [],
    "source": [
     "# A sample groupby similar to above. \n",
-    "grouped = None"
+    "grouped = df.groupby(['State', 'Gender'])['Deaths', 'Population'].agg(['mean', 'min', 'max', 'std'])\n",
+    "\n",
+    "grouped.head()"
    ]
   },
   {
@@ -296,7 +320,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "grouped.index"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -316,7 +342,8 @@
    "outputs": [],
    "source": [
     "# First, reset the index. Notice the subtle difference; State and Gender are now columns rather then the index.\n",
-    "grouped = None"
+    "grouped = grouped.reset_index()\n",
+    "grouped.head()"
    ]
   },
   {
@@ -333,7 +360,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "grouped.index"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -350,7 +379,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Notice that this causes columns to be MultiIndexed!\n"
+    "#Notice that this causes columns to be MultiIndexed!\n",
+    "grouped.columns"
    ]
   },
   {
@@ -369,7 +399,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "grouped.columns.get_level_values(0)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -383,7 +415,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "grouped.columns.get_level_values(1)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -425,7 +459,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "grouped.head()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -451,7 +487,8 @@
    "outputs": [],
    "source": [
     "# Now it's time to pivot!\n",
-    "pivot = None"
+    "pivot = grouped.pivot(index='State', columns='Gender', values='Deaths_mean')\n",
+    "pivot.head()"
    ]
   },
   {
@@ -472,7 +509,8 @@
    "outputs": [],
    "source": [
     "# Again, notice the subtle difference of reseting the index:\n",
-    "pivot = None"
+    "pivot = pivot.reset_index()\n",
+    "pivot.head()"
    ]
   },
   {
@@ -495,7 +533,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Now let's make a sweet bar chart!!\n"
+    "# Now let's make a sweet bar chart!!\n",
+    "pivot.plot(kind='barh', figsize=(15,8))"
    ]
   },
   {
@@ -520,7 +559,8 @@
     "#Where's the states?! Notice the y-axis is just a list of numbers.\n",
     "#This is populated by the DataFrame's index.\n",
     "#When we used the .reset_index() method, we created a new numbered index to name each row. \n",
-    "#Let's fix that by making state the index again.\n"
+    "#Let's fix that by making state the index again.\n",
+    "pivot.set_index('State').plot(kind='barh', figsize=(15,8))"
    ]
   },
   {
@@ -538,7 +578,8 @@
    "source": [
     "# Also notice that if we call the DataFrame pivot again, state is not it's index.\n",
     "#The above method returned a DataFrame with State as index and we plotted it,\n",
-    "#but it did not update the DataFrame itself.\n"
+    "#but it did not update the DataFrame itself.\n",
+    "pivot.head()"
    ]
   },
   {
@@ -559,7 +600,8 @@
    "outputs": [],
    "source": [
     "#If we wanted to more permanently change the index we would set it first and then plot:\n",
-    "pivot = None"
+    "pivot = pivot.set_index('State')\n",
+    "pivot.plot(kind='barh', figsize=(15,8))"
    ]
   },
   {
@@ -574,7 +616,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "pivot.head()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -592,7 +636,8 @@
    "outputs": [],
    "source": [
     "# Lastly, let's stack each of these bars for each state.\n",
-    "#Notice we don't have to worry about index here, because we've already set it above.\n"
+    "#Notice we don't have to worry about index here, because we've already set it above.\n",
+    "pivot.plot(kind='barh', figsize=(15,8), stacked=True)"
    ]
   },
   {
@@ -613,7 +658,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "grouped.head()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -629,7 +676,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "grouped.stack()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -705,7 +754,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
